--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <title>{{ site.title | default: site.github.repository_name }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
@@ -15,9 +15,11 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <img src="/_layout/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150>
+        <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
         
-        <p>Param pam pam</p>
+        <p>E-mail: dmitry.kobak@uni-tuebingen.de</p>
+        <p><a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
