--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <img src="/_layouts/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150>
+        <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150>
         <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
         
         <p>E-mail: dmitry.kobak@uni-tuebingen.de</p>
