--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,11 @@
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150>
         <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
         
-        <p>E-mail: dmitry.kobak@uni-tuebingen.de</p>
-        <p><a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
+        <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
+        <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
