--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,20 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150>
+        <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
         <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
         
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
+        
+        <hr>
+        
+        <h3>Nano CV</h3>
+        <p><b>2013&ndash;2016</b> Champalimaud Institute, Lisbon, <a href="http://machenslab.org/">Machens lab</a>. 
+          Dimensionality reduction of neurophysiological recordings. <a href="https://elifesciences.org/articles/10989">
+          eLife 2016</a>.
+        <p><b>2007&ndash;2012</b>: Uni Freiburg / Imperial College London, <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>. Motor control. <a href="www.jneurosci.org/content/32/29/9898.short
+          ">Jneurosci 2012</a>.
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
