--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,11 @@
         <hr>
         
         <h3>Nano CV</h3>
-        <p><b>2013&ndash;2016</b> Champalimaud Institute, Lisbon, <a href="http://machenslab.org/">Machens lab</a>. 
-          Dimensionality reduction of neurophysiological recordings. <a href="https://elifesciences.org/articles/10989">
+        <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a>, Champalimaud Institute, Lisbon. 
+          <br>Main Main paper: Demixed principal component analysis of neural population data, <a href="https://elifesciences.org/articles/10989">
           eLife 2016</a>.
-        <p><b>2007&ndash;2012</b>: Uni Freiburg / Imperial College London, <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>. Motor control. <a href="www.jneurosci.org/content/32/29/9898.short
+        <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>, Freiburg University &rarr; Imperial College London. 
+          Motor control. <a href="www.jneurosci.org/content/32/29/9898.short
           ">Jneurosci 2012</a>.
 
         {% if site.github.is_project_page %}
