--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,9 @@
         
         <h3>Nano CV</h3>
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a>, Champalimaud Institute, Lisbon. 
-          <br>Main Main paper: Demixed principal component analysis of neural population data, <a href="https://elifesciences.org/articles/10989">
-          eLife 2016</a>.
-        <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>, Freiburg University &rarr; Imperial College London. 
-          Motor control. <a href="www.jneurosci.org/content/32/29/9898.short
+          <br>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a>.
+        <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>, Freiburg University, then Imperial College London. 
+          <br>Main paper: <a href="www.jneurosci.org/content/32/29/9898.short
           ">Jneurosci 2012</a>.
 
         {% if site.github.is_project_page %}
@@ -52,7 +51,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <!--<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>-->
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
