--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
         <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
         
+        <p>Main current interests: exploratory analysis of the single cell RNA-seq data, primarily dimensionality reduction and clustering.</p>
+        
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
         
