--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
-        <p>Postdoc in the <a href="www.berenslab.org">Philipp Berens</a> group in Tübingen University</p>
+        <p>Postdoc in <a href="www.berenslab.org">Berens lab</a> in Tübingen University</p>
         
         <p>Main current interests: exploratory analysis of the single cell RNA-seq data, primarily dimensionality reduction and clustering.</p>
         
