--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: site.github.repository_name }}</title>
+    {% if page.url == "/" %}
+       <title>{{ site.title | default: site.github.repository_name }}</title>
+    {% else %}
+       <title>{{ page.title }} | {{ site.title | default: site.github.repository_name }}</title>
+    {% endif %}
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
@@ -17,9 +21,9 @@
     <div class="wrapper">
       <header>
         {% if page.url == "/" %}
-           <h1>{{ site.title | default: site.github.repository_name }}]</h1>
+           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         {% else %}
-           <h1><a href="/">{{ site.title | default: site.github.repository_name }}]</a></h1>
+           <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
         {% endif %}
         
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
