--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,21 +27,22 @@
         {% endif %}
         
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
-        <p>Postdoc in <a href="www.berenslab.org">Berens lab</a> in Tübingen University</p>
-        
-        <p>Main current interests: exploratory analysis of the single cell RNA-seq data, primarily dimensionality reduction and clustering.</p>
-        
+
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
+        
+        <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering.</p>
         
         <hr>
         
         <h3>Nano CV</h3>
-        <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a>, Champalimaud Institute, Lisbon. 
+        <p><p>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.</p>
+        <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
           <br>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a>.
-        <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>, Freiburg University, then Imperial College London. 
+        <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
           <br>Main paper: <a href="www.jneurosci.org/content/32/29/9898.short
           ">Jneurosci 2012</a>.
+        <p>Before that studied physics in St. Petersburg.</p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
