--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
            <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
         {% endif %}
         
-        <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px">
+        <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px;margin-bottom:.5em">
 
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
@@ -36,7 +36,7 @@
         <hr>
         
         <h3>Nano CV</h3>
-        <p><p>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.</p>
+        <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.</p>
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
           <br>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a>.
         <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
