--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
     <div class="wrapper">
-      <p style="font-size:120%; text-align: right"><img src="/kobak_tiny_round.jpg" width=50 height=50 alt="" style="margin-right: 3em"><a href="/">Dmitry Kobak</a><p>
+      <p style="font-size:120%; text-align: right"><a href="/">Dmitry Kobak</a><p>
       <hr>
       
       {{ content }}
