--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,9 @@
       <p style="font-size:120%; text-align: right"><a href="/">Dmitry Kobak</a><p>
       <hr>
       
+      <h1>{{ page.title}}</h1>
+      <p style="color:grey; margin-top:-1em; font-weight:bold">page.date</p>
+      
       {{ content }}
 
       <footer>
