--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
       <hr>
       
       <h1>{{ page.title}}</h1>
-      <p style="color:grey; margin-top:-1em; font-weight:bold">page.date</p>
+      <p style="color:grey; margin-top:-1em; font-weight:bold">{{ page.date | date_to_long_string }}</p>
       
       {{ content }}
 
