--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,15 +33,17 @@
         
         <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering.</p>
         
+        <p><a href="https://stats.stackexchange.com/users/28666">CrossValidated.SE</a></p>
+        
         <hr>
         
         <h3>Nano CV</h3>
         <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.</p>
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
-          <br>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a>.
+          <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.
         <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
-          <br>Main paper: <a href="www.jneurosci.org/content/32/29/9898.short
-          ">Jneurosci 2012</a>.
+          <br><i>Main paper: <a href="www.jneurosci.org/content/32/29/9898.short
+            ">Jneurosci 2012</a></i>.
         <p>Before that studied physics in St. Petersburg.</p>
 
         {% if site.github.is_project_page %}
