--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
           <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.
         <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
-          <br><i>Main paper: <a href="www.jneurosci.org/content/32/29/9898.short
+          <br><i>Main paper: <a href="http://www.jneurosci.org/content/32/29/9898.short
             ">Jneurosci 2012</a></i>.
         <p>Before that studied physics in St. Petersburg.</p>
 
