--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px;margin-bottom:.5em">
 
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
-        <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a></p>
+        <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a><br>
+        <a href="https://stats.stackexchange.com/users/28666">CrossValidated.SE</a></p>
         
         <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering.</p>
         
-        <p><a href="https://stats.stackexchange.com/users/28666">CrossValidated.SE</a></p>
         
         <hr>
         
