--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,13 +38,22 @@
         <hr>
         
         <h3>Nano CV</h3>
-        <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.</p>
+        <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.
+          <br><i>Current work: <a href="https://www.biorxiv.org/content/early/2018/04/16/302208">biorxiv 2018</a></i></p>
+        
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
-          <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.
+          <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.</p>
         <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
-          <br><i>Main paper: <a href="http://www.jneurosci.org/content/32/29/9898.short
-            ">Jneurosci 2012</a></i>.
-        <p>Before that studied physics in St. Petersburg.</p>
+          <br><i>Main paper: <a href="http://www.jneurosci.org/content/32/29/9898.short">Jneurosci 2012</a></i>.</p>
+        <p>Before that studied computer science (BSc) and theoretical physics (MSc) in St. Petersburg.</p>
+        
+        <hr>
+        
+        <h3>PDFs</h3>
+        <p><a href="/papers/kobak_elife2016.pdf">eLife 2016</a><br>
+          <a href="/papers/kobak_aoas2016.pdf">AOAS 2016</a><br>
+          <a href="/papers/kobak_significance2016.pdf">Significance 2016</a><br>
+          <a href="/papers/kobak_jneurosci2012.pdf">J Neurosci 2012</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
