--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,11 +49,7 @@
         
         <hr>
         
-        <h3>PDFs</h3>
-        <p><a href="/papers/kobak_elife2016.pdf">eLife 2016</a><br>
-          <a href="/papers/kobak_aoas2016.pdf">AOAS 2016</a><br>
-          <a href="/papers/kobak_significance2016.pdf">Significance 2016</a><br>
-          <a href="/papers/kobak_jneurosci2012.pdf">J Neurosci 2012</a></p>
+        <p><a href="/papers/">pdfs</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
