--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,16 +30,16 @@
 
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a><br>
-        <a href="https://stats.stackexchange.com/users/28666">CrossValidated.SE</a></p>
+        <a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a></p>
         
-        <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering.</p>
+        <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering. t-SNE!</p>
         
         
         <hr>
         
         <h3>Nano CV</h3>
         <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.
-          <br><i>Current work: <a href="https://www.biorxiv.org/content/early/2018/04/16/302208">biorxiv 2018</a></i></p>
+          <br><i>Current work: <a href="https://www.biorxiv.org/content/early/2018/04/16/302208">biorxiv 2018a</a>, <a href="https://www.biorxiv.org/content/early/2018/10/25/453449">biorxiv 2018b</a></i></p>
         
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
           <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.</p>
@@ -49,7 +49,7 @@
         
         <hr>
         
-        <p><a href="/papers/">pdfs</a></p>
+        <p><a href="/papers/">paper pdfs</a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
