--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     <![endif]-->
   </head>
   <body>
+    <style>a:hover,a:focus{font-weight:normal}</style>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
     <div class="wrapper">
