--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a><br>
         <a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a></p>
         
-        <p>Current main interests: exploratory analysis of the single cell RNA-seq data, dimensionality reduction, clustering. t-SNE!</p>
+        <p>Current main interests: exploratory analysis of single cell RNA-seq data, dimensionality reduction, clustering. t-SNE!</p>
         
         
         <hr>
