--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <img src="/kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 style="margin-left:20px;margin-bottom:.5em">
 
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a><br>
-        <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar</a><br>
+        <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ"><b>Google Scholar</b></a><br>
         <a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a></p>
         
         <p>Current main interests: exploratory analysis of single cell RNA-seq data, dimensionality reduction, clustering. t-SNE!</p>
@@ -41,12 +41,16 @@
         
         <h3>Nano CV</h3>
         <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.
-          <br><i>Current work: <a href="https://www.biorxiv.org/content/early/2018/04/16/302208">biorxiv 2018a</a>, <a href="https://www.biorxiv.org/content/early/2018/10/25/453449">biorxiv 2018b</a></i></p>
+          <br><i>Current work: <a href="https://www.biorxiv.org/content/10.1101/453449v2">The art of t-SNE</a>, 
+          <a href="https://www.biorxiv.org/content/10.1101/302208v2">sparse RRR</a>,
+          <a href="https://www.nature.com/articles/s41467-019-12058-z">Layer 4</i>, 
+          <a href="https://ecmlpkdd2019.org/downloads/paper/327.pdf">Heavy-tailed t-SNE</i></p>
         
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
-          <br><i>Main paper: <a href="https://elifesciences.org/articles/10989">eLife 2016</a></i>.</p>
+          <br><i>Main papers: <a href="https://elifesciences.org/articles/10989">dPCA</a>,
+          <a href="https://elifesciences.org/articles/44526">A1 geometry</a></i>.</p>
         <p><b>2007&ndash;2012</b>: PhD in <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a> at Freiburg University, then at Imperial College London. 
-          <br><i>Main paper: <a href="http://www.jneurosci.org/content/32/29/9898.short">Jneurosci 2012</a></i>.</p>
+          <br><i>Main paper: <a href="http://www.jneurosci.org/content/32/29/9898.short">Adaptation paths</a></i>.</p>
         <p>Before that studied computer science (BSc) and theoretical physics (MSc) in St. Petersburg.</p>
         
         <hr>
