--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,9 +43,9 @@
         <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.
           <br><i>Current work: <a href="https://www.biorxiv.org/content/10.1101/453449v2">The art of t-SNE</a>, 
           <a href="https://www.biorxiv.org/content/10.1101/302208v2">sparse RRR</a>,
-          <a href="https://www.nature.com/articles/s41467-019-12058-z">layer 4</i>, 
-          <a href="https://ecmlpkdd2019.org/downloads/paper/327.pdf">heavy-tailed t-SNE</i>,
-          <a href="https://arxiv.org/abs/1805.10939">implicit ridge</a></p>
+          <a href="https://www.nature.com/articles/s41467-019-12058-z">layer 4</a>, 
+          <a href="https://ecmlpkdd2019.org/downloads/paper/327.pdf">heavy-tailed t-SNE</a>,
+          <a href="https://arxiv.org/abs/1805.10939">implicit ridge</a></i></p>
         
         <p><b>2013&ndash;2016:</b> Postdoc in <a href="http://machenslab.org/">Machens lab</a> at Champalimaud Institute, Lisbon. 
           <br><i>Main papers: <a href="https://elifesciences.org/articles/10989">dPCA</a>,
