--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
         
         <h3>Nano CV</h3>
         <p><b>From 2017:</b> Postdoc in <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University.
-          <br><i>Current work: <a href="https://www.biorxiv.org/content/10.1101/453449v2">The art of t-SNE</a>, 
-          <a href="https://www.biorxiv.org/content/10.1101/302208v2">sparse RRR</a>,
+          <br><i>Current work: <a href="https://www.nature.com/articles/s41467-019-13056-x">The art of t-SNE</a>, 
           <a href="https://www.nature.com/articles/s41467-019-12058-z">layer 4</a>, 
+          <a href="https://www.biorxiv.org/content/10.1101/302208v2">sparse RRR</a>,
           <a href="https://ecmlpkdd2019.org/downloads/paper/327.pdf">heavy-tailed t-SNE</a>,
           <a href="https://arxiv.org/abs/1805.10939">implicit ridge</a></i></p>
         
